other/require-unique-uid-per-workload/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
      securityContext:
        runAsUser: 144
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
      securityContext:
        runAsUser: 1234
    - name: busybox02
      image: ghcr.io/kyverno/test-busybox:1.35
      securityContext:
        runAsUser: 122
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: busybox
      image: ghcr.io/kyverno/test-busybox:1.35
      securityContext:
        runAsUser: 122
    - name: busybox02
      image: ghcr.io/kyverno/test-busybox:1.35
      securityContext:
        runAsUser: 144
