other/require-unique-uid-per-workload/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
    - name: busybox
      image: busybox:1.35
      securityContext:
        runAsUser: 1234
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
    - name: busybox
      image: busybox:1.35
      securityContext:
        runAsUser: 144
    - name: busybox02
      image: busybox:1.35
      securityContext:
        runAsUser: 111
